--- a/documentation.tex
+++ b/documentation.tex
@@ -10,9 +10,9 @@
 \usepackage[
   bookmarks=true, 
   bookmarksnumbered=true, 
-  pdftitle={Documentation for mod_auth(nz)_ibmdb2}, 
+  pdftitle={Documentation for mod auth(nz) ibmdb2}, 
   pdfauthor={Helmut K. C. Tessarek}, 
-  pdfcreator={{$ $Id$ $}}, 
+  pdfcreator={$ $Id$ $}, 
   colorlinks=false, 
   linkcolor={blue}, 
   citecolor={blue}, 
